# letmecook

./: README.md  db.sqlite3  manage.py  pyproject.toml
auth_app/: context_processors.py  models.py  urls.py  views.py
auth_app/templates/: chat.html  friends.html  login.html  register.html  user_profile.html
home/: views.py
home/templates/: base.html  home.html  search_results.html
letmecook/: asgi.py  settings.py  urls.py  wsgi.py
profile_app/: urls.py  views.py
profile_app/templates/: profile.html  profile_delete.html  profile_edit.html
recipes/: apps.py  models.py  urls.py  views.py
recipes/templates/: explore_recipes.html  my_recipes.html  recipe_delete.html  saved_recipes.html  search_results.html
recipes/templatetags/: recipe_filters.py
