[project]
name = "letmecook"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Caballero María", email = "pabcabmar3@alum.us.es"},
    {name = "Alfonso Luis Alonso Lanzarán", email = "alfonlan@alum.us.es"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.9"
django = "*"
mongoengine = "*"
werkzeug = "*"
black = "*"
isort = "*"
djlint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
